--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.6"
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:2.2.6"
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
